# dynamix

./: .gitignore  CMakeLists.txt  package.xml  zed_obj_det_sub  zed_obj_det_sub_tutorial.cpp
exec/: cluster_extraction  masked_pointcloud  maskpoints  pointcloud
launch/: pointgen.launch  pointgen_fin.launch  seggs.launch
scripts/codes/: demo.py  depthseg.py  final.py  final_test.py  jpgpng.py  learn_torch1.ipynb  learn_torch2.ipynb  masternode.py  result.ipynb  sem_seg.ipynb  sem_seg_v3.ipynb  test.py  testing2.py  thresh.py
semseg/: fps.py  semseg.py
semseg/mmseg/models/: builder.py
src/: cluster_extraction.cpp  depth_pcl.cpp  planar_segmentation.cpp
yamls/: common.yaml
